--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Passwoord Generator</h1>
+        <h1>Password Generator</h1>
         <div class="p-header">
             <input type="text" id="password">
             <button class="copy" id="copy">Copy</button>
