--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="p-body">
             <div class="form-control">
-                <label for="p-length">Passwoord Length</label>
+                <label for="p-length">Password Length</label>
                 <input type="number" id="p-length" value="12" min="8" max="30">
             </div>
             <div class="form-control">
